--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,17 @@
 cmake_minimum_required(VERSION 3.16)
-project(aeronWrapper VERSION 1.0.0 LANGUAGES CXX)
 
+# Project setup
+set(PROJECT_NAME aeronWrapper)
+project(${PROJECT_NAME} VERSION 1.0.0 LANGUAGES CXX)
+
+# C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Default build type
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+endif()
 
 include(FetchContent)
 include(GNUInstallDirs)
